--- a/smblog/app/globals.css
+++ b/smblog/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,18 +17,66 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+* {
+  padding: 0;
+  margin: 0;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body {
+  font-family: "Orbitron", sans-serif;
+  background-color: #F1F3FF;
+}
+nav{
+  z-index: 100;
+}
+.custom-clip-path {
+  clip-path: polygon(15% 0, 80% 0%, 100% 0, 100% 67%, 88% 100%, 0 100%, 0% 80%, 0 43%);
+}
+
+.pic {
+  clip-path: polygon(20% 0%, 80% 0%, 100% 0, 100% 80%, 80% 100%, 20% 100%, 0 100%, 0% 20%);
+}
+
+.c1 {
+  clip-path: polygon(20% 0%, 80% 0%, 100% 0, 100% 80%, 80% 100%, 20% 100%, 0 100%, 0% 20%);
+  z-index: 5;
+}
+.img_sli{
+  transform: translateX(5rem);
+}
+.c2 {
+  clip-path: polygon(20% 0%, 80% 0%, 100% 0, 100% 80%, 80% 100%, 20% 100%, 0 100%, 0% 20%);
+  transform: translate(-3rem, 3rem);
+}
+.awssld__wrapper{
+  height: 60vh !important;
+  margin-top: 8%;
+  
+}
+.awssld__bullets button:not(.awssld__bullets--active) {
+  border-radius: 0.1rem !important;
+  background-color: #B2B3DE !important;
+}
+.awssld__bullets--active{
+  border-radius: 0.1rem !important;
+  background-color: #373559 !important;
+}
+.awssld__content{
+  background: transparent !important;
+  /* overflow: hidden; */
+  /* overflow: hidden;padding-top: 8rem; */
+}
+.awssld__box{
+  height: 80% !important;
+}
+.awssld__content div{
+  /* border: red solid; */
+  height: 95%;
+  /* padding-top: 4rem; */
+}
+.clipk,.clipk_sub{
+  clip-path: polygon(0 0, 80% 0%, 100% 0, 100% 66%, 88% 100%, 0 100%, 0% 80%, 0% 20%);
+}
+.catagory{
+  clip-path: polygon(12% 0, 80% 0%, 100% 0, 100% 66%, 100% 100%, 0 100%, 0% 80%, 0 37%);
 }
