--- a/smblog/app/globals.css
+++ b/smblog/app/globals.css
@@ -93,3 +93,6 @@ nav{
 .magiccut{
   clip-path: polygon(0 0, 93% 0, 100% 0, 100% 82%, 100% 100%, 10% 100%, 0 72%, 0% 20%);
 }
+.promo{
+  clip-path: polygon(13% 0, 93% 0, 100% 0, 100% 61%, 89% 100%, 0 100%, 0 72%, 0 37%);
+}
